--- a/src/scss/base/_typography.scss
+++ b/src/scss/base/_typography.scss
@@ -3,16 +3,16 @@
  */
 body {
   color: $text-color;
-  font: normal 125% / 1.4 $text-font-stack;
+  font: normal 100% / 1.4 $text-font-stack;
 }
 
 /**
  * Temp fix for:
- * 
+ *
  * Issue #3233533: Core .placeholder class conflicts with new Bootstrap
  * .placeholder class
  * https://www.drupal.org/project/drupal/issues/3233533
- * 
+ *
  * Issue #3246827: Fix em.placeholder style from Bootstrap 5 base styling with
  * the Drupal core placeholder
  * https://www.drupal.org/project/vartheme_bs5/issues/3246827
